<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_data"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_papaya"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/menu_data"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_help"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/iv_data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iv_diagnose"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_papaya"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_help"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iv_diagnose"
        android:text="@string/menu_help"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_diagnose"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/iv_data"
        app:layout_constraintLeft_toRightOf="@id/iv_help"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_diagnostic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_diagnose"
        app:layout_constraintLeft_toRightOf="@id/iv_help"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/menu_diagnose"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_about"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/iv_diagnose"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_papaya"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_about"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/menu_about"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>